[package]
name = "desktop-build-tracker"
version = "1.0.2"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.6.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serenity = {version = "0.11.5", features= ["http", "model"]}
dotenv = "0.15.0"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }