[package]
name = "desktop-build-tracker"
version = "1.0.3"
edition = "2021"


[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.6.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rusqlite_migration = "1.1.0"
serenity = { version = "0.12", features = ["http", "model", "builder"] }
dotenv = "0.15.0"
chrono = "0.4.35"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
