[package]
name = "store-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serenity = {version = "0.11.5", features= ["http", "model"]}
dotenv = "0.15.0"
chrono = "0.4.22"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }